chore: 아이콘 파일 추가

--- a/app/src/main/res/drawable/ic_time_active.xml
+++ b/app/src/main/res/drawable/ic_time_active.xml
@@ -1,10 +1,21 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="16dp"
     android:height="16dp"
     android:viewportWidth="16"
     android:viewportHeight="16">
   <path
       android:pathData="M8,16C12.418,16 16,12.418 16,8C16,3.582 12.418,0 8,0C3.582,0 0,3.582 0,8C0,12.418 3.582,16 8,16ZM8.6,3.333C8.6,3.002 8.331,2.733 8,2.733C7.669,2.733 7.4,3.002 7.4,3.333V8V8.321L7.667,8.499L11.667,11.166C11.943,11.35 12.315,11.275 12.499,11C12.683,10.724 12.608,10.351 12.333,10.167L8.6,7.679V3.333Z"
-      android:fillColor="#363636"
-      android:fillType="evenOdd"/>
+      android:fillType="evenOdd">
+    <aapt:attr name="android:fillColor">
+      <gradient 
+          android:centerX="8"
+          android:centerY="8"
+          android:gradientRadius="8"
+          android:type="radial">
+        <item android:offset="0" android:color="#FFEC8F3D"/>
+        <item android:offset="1" android:color="#FFE44747"/>
+      </gradient>
+    </aapt:attr>
+  </path>
 </vector>
