design: 위젯 미리보기 이미지 추가

--- a/app/src/main/res/xml/step_count_widget_info.xml
+++ b/app/src/main/res/xml/step_count_widget_info.xml
@@ -3,6 +3,7 @@
     android:minWidth="100dp"
     android:minHeight="40dp"
     android:initialLayout="@layout/glance_default_loading_layout"
+    android:previewImage="@drawable/img_widget_preivew"
     android:resizeMode="horizontal|vertical"
     android:widgetCategory="home_screen">
 </appwidget-provider>
